Fixed product alignment

--- a/components/HomeProducts/_index.scss
+++ b/components/HomeProducts/_index.scss
@@ -10,7 +10,7 @@ h4 {
     text-transform: uppercase;
     color: white;
     font-weight: 600;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-top: 3px;
 }
 
